...
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="@string/locationLabel"
                android:textSize="20sp" />

            <Button
                android:id="@+id/goButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignBottom="@id/cityLabel"
                android:layout_alignEnd="@+id/cityLabel"
                android:layout_alignRight="@+id/cityLabel"
                android:layout_alignTop="@id/cityLabel"
...
                android:linksClickable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/cityNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterLocation"
                android:linksClickable="true"
                android:text=""
                android:textAlignment="center"
...
